<resources>
    <string name="app_name">DailyDash</string>
    <string name="client_id">460966855550-i90usn9dhn4fud07f266gf3vq5apbvnt.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_your_registered_account">Sign in to your registered account</string>
    <string name="email_adress">Email Adress</string>
    <string name="email_address">Email Address</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_s">sign up</string>
    <string name="or">OR</string>
    <string name="register_with_your_valid_email_address">Register with your valid email address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sing_ins">sing in</string>
    <string name="rewrite_your_password">Rewrite Your Password</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cook_now">
        <u>Cook Now</u>.

    </string>
    <string name="name_of_meal">Name of Meal</string>
    <string name="ready_for_a_delicious_meal_today">Ready for a Delicious Meal Today !</string>
    <string name="instructios">Instructios</string>
    <string name="ingredients">Ingredients</string>
    <string name="video_of_preparation">Video of preparation</string>
    <string name="meal_title">Meal Title</string>
    <string name="meals">Meals:</string>
    <string name="appName">Daily Dash</string>
    <string name="backup">Backup</string>
    <string name="log_out">Log out</string>
    <string name="favourite">Favourite</string>
    <string name="explore_as_guest">Explore as Guest !?</string>
    <string name="ok">OK</string>
    <string name="canel">Canel</string>
</resources>