<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#B2E7F0DC"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".authentication.login.views.LoginActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="486dp"
        android:layout_height="300dp"
        app:srcCompat="@drawable/siginupbackground2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        app:srcCompat="@drawable/siginupbackground1" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/siginupbackground3" />
    <ImageView
        android:id="@+id/imageView4"
        android:layout_marginStart="200dp"
        android:layout_width="220dp"
        android:layout_height="235dp"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/siginupbackground3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/petrona"

        android:textSize="24sp"
        android:textColor="@color/darkGreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in" />
    <TextView
        android:id="@+id/textView3"
        android:fontFamily="@font/petrona"

        android:layout_marginStart="20dp"
        android:layout_marginTop="340dp"
        android:textSize="14sp"

        android:textColor="@color/primaryColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_registered_account" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="380dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"

            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/LighterGray"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/lightGray"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/poppins"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/LighterGray"
            app:boxStrokeWidth="1dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:textColor="@color/lightGray"
                android:textSize="16sp" />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="250dp"
            android:layout_marginTop="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/petrona"
            android:padding="5dp"
            android:text="@string/forget_password"
            android:textColor="@color/darkGreen" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/materialButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:fontFamily="@font/petrona"
            android:text="@string/sign_in"
            android:textSize="20sp"
            app:backgroundTint="@color/darkGreen"
            app:cornerRadius="5dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:focusable="true"
                android:fontFamily="@font/petrona"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/darkGreen"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textButton2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/petrona"
                android:text="@string/sign_up_s"
                android:textColor="@color/darkGreen"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/petrona"
            android:gravity="center"
            android:text="@string/or"
            android:textColor="@color/darkGreen"
            android:textSize="24sp" />


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="130dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/google" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="50dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/facebook" />
        </LinearLayout>
        <TextView
            android:id="@+id/guest"
            android:layout_marginStart="250dp"
            android:fontFamily="@font/petrona"
            android:textSize="18sp"
            android:gravity="end"
            android:layout_marginTop="20dp"
            android:textColor="@color/darkGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_as_guest" />
    </LinearLayout>
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:lottie_rawRes="@raw/loadding"
        app:lottie_autoPlay="false"
        app:lottie_loop="true" />


</FrameLayout>